# setml

./: .dockerignore  .gitignore  .merlin  Dockerfile  LICENSE.md  Makefile  README.md  bsconfig.json  docker-compose.yml  package-lock.json  package.json  rollup.config.js  setml.install  setml.opam  webpack.config.js
__tests__/: api_messages_test.re  client_api_messages_test.ml  client_messages_test.ml  messages_test.re
lib/bs/: .bsbuild  .bsdeps  .ninja_log  ReactTemplate.cmi  ReactTemplate.cmj  ReactTemplate.cmt  ReactTemplate.js  ReactTemplate.mlmap  build.ninja
lib/bs/src/: Index-ReactTemplate.cmi  Index-ReactTemplate.cmj  Index-ReactTemplate.cmt  Index.mlast  Index.mlast.d  Page-ReactTemplate.cmi  Page-ReactTemplate.cmj  Page-ReactTemplate.cmt  (+2 more)
perftest/: go.mod  main.go
public/: app.js  game.html  index.html
public/assets/: style.2c283251f812d1a9317208150a62c433.css  style.css
public/css/: style.css
release/: index.html
script/: code.rb  db_env.sh  docker_build.sh  docker_build_publish.sh  dump_structure.sh  mercury_export.sh  psql.sh  reload_db.sh  run.sh  setup_dev.sh
sql/: schema.sql
src/client/: Board.re  CanvasUtils.re  CardRender.re  ClientApiMessages.re  ClientMessages.re  ClientUtil.re  ConsecutiveSnackbars.re  Drawer.re  Footer.re  Game.re  GameLayout.re  GameTop.re  Grid.re  Index.re  NameDialog.re  PlayAgainButton.re  PlayerGamesList.re  PlayerScores.re  Rect.re  Selected.re  Sidebar.re  Util.re  WinDialog.re
src/server/: .merlin  clients.ml  clients.mli  cohttp_server.ml  config.ml  config.mli  crypto.ml  crypto.mli  db.ml  db.mli  dbp.ml  dbt.ml  dune  file_server.ml  info.ml  jbuild  pubsub.ml  pubsub.mli  route.ml  server_api_messages.ml  server_messages.ml  server_util.ml  sess.ml  session.ml  setml.ml  templates.ml  test.ml  test_db.ml  util.ml
src/server_test/: api_messages_tests.ml  base_conv_tests.ml  card_tests.ml  clients_tests.ml  combinatorics_tests.ml  crypto_tests.ml  db_tests.ml  dbp_tests.ml  dune  jbuild  messages_tests.ml  pubsub_tests.ml  server_util_tests.ml  test.ml  test_async.ml  test_processes.ml  test_sequential.ml  test_sync.ml  test_util.ml
src/shared/: api_messages.ml  base_conv.ml  base_conv.mli  card.ml  card.mli  combinatorics.ml  dune  game_deck.ml  game_status.ml  jbuild  messages.ml  messages_util.ml  path_data.ml  shared_util.ml  theme.ml  theme.mli  util.ml
