opam-version: "2.0"
name: "setml"
version: "0.1.0"
maintainer: "Andrew Tongen <atongen@gmail.com>"
authors: "Andrew Tongen <atongen@gmail.com>"
homepage: "https://github.com/atongen/setml"
bug-reports: "https://github.com/atongen/setml"
license: "MIT"
dev-repo: "git://github.com/atongen/setml"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build & >= "1.2.1"}
  "caqti" {build & >= "0.11.0"}
  "caqti-driver-postgresql" {build & >= "0.11.0"}
  "caqti-lwt" {build & >= "0.11.0"}
  "cohttp" {build & >= "1.1.0"}
  "cohttp-lwt" {build & >= "1.0.2"}
  "cohttp-lwt-unix" {build & >= "1.0.2"}
  "containers" {build & >= "2.3"}
  "cow" {build & >= "2.3.0"}
  "nocrypto" {build & >= "0.5.4"}
  "postgresql" {build & >= "4.4.0"}
  "re" {build & >= "1.8.0"}
  "websocket" {build & >= "2.10"}
  "websocket-lwt" {build & >= "2.11"}
  "yojson" {build & >= "1.4.1"}
  "ounit" {build & >= "2.0.8"}
]
